rns-lang/tests/snapshots/diagnostic/err-lexer-directives-dot_newline.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.
.end
----- STDOUT -----

----- STDERR -----
Error: unexpected character
   ╭─[ test_data/diagnostic/err/lexer/directives/dot_newline.ja:1:2 ]
   │
 1 │ .
   │  ┬  
   │  ╰── found '\n' here
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code, .annotation
───╯
